--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -8,13 +8,13 @@
   <meta http-equiv="expires" content="0">
   <title>住院藥局調劑</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=1.1">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="allocate.css?v=1.6">
   <link rel="stylesheet" href="review.css">
   <link rel="stylesheet" href="popup_dc_new.css">
   <link rel="stylesheet" href="popup_bed_list.css?v=1.2">
-  <link rel="stylesheet" href="popup_med_list.css?v=12.0">
+  <link rel="stylesheet" href="popup_med_list.css?v=14.0">
   <link rel="stylesheet" href="popup_med_list_search.css">
   <link rel="stylesheet" href="popup_light_table_select.css">
   <link rel="stylesheet" href="popup_med_pic.css">
@@ -22,9 +22,9 @@
   <link rel="stylesheet" href="popup_similar_drugs.css">
   <link rel="stylesheet" href="popup_physician_notes.css">
   <link rel="stylesheet" href="popup_insurance_regulations.css">
-  <link rel="stylesheet" href="popup_bed_change.css">
+  <link rel="stylesheet" href="popup_bed_change.css?v=1.5">
   <link rel="stylesheet" href="popup_bed_change_search.css">
-  <link rel="stylesheet" href="popup_med_change_list.css?v=1.0">
+  <link rel="stylesheet" href="popup_med_change_list.css?v=1.3">
   <script src="../Function/Basic.js?v=1.14"></script>
 
   <script>
