--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -8,12 +8,12 @@
   <meta http-equiv="expires" content="0">
   <title>住院藥局調劑</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
-  <link rel="stylesheet" href="style.css?v=1.1">
+  <link rel="stylesheet" href="style.css?v=1.3">
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="allocate.css?v=1.6">
+  <link rel="stylesheet" href="allocate.css?v=1.9">
   <link rel="stylesheet" href="review.css">
   <link rel="stylesheet" href="popup_dc_new.css">
-  <link rel="stylesheet" href="popup_bed_list.css?v=1.2">
+  <link rel="stylesheet" href="popup_bed_list.css?v=1.3">
   <link rel="stylesheet" href="popup_med_list.css?v=14.0">
   <link rel="stylesheet" href="popup_med_list_search.css">
   <link rel="stylesheet" href="popup_light_table_select.css">
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="popup_insurance_regulations.css">
   <link rel="stylesheet" href="popup_bed_change.css?v=1.5">
   <link rel="stylesheet" href="popup_bed_change_search.css">
+  <link rel="stylesheet" href="popup_discharged_list.css?v=1.3">
   <link rel="stylesheet" href="popup_med_change_list.css?v=1.3">
   <script src="../Function/Basic.js?v=1.14"></script>
 
@@ -65,6 +66,7 @@
           loadScript("popup_med_change_list.js");
           loadScript("popup_bed_change.js");
           loadScript("popup_bed_change_search.js");
+          loadScript("popup_discharged_list.js");
         })();
 
   </script>
@@ -109,6 +111,9 @@
 
     get_popup_bed_change_search();
     popup_bed_change_search_div.Set_Visible(false);
+
+    get_popup_discharged_list();
+    popup_discharged_list_div.Set_Visible(false);
   </script>
 
   <div class="under-line">
