--- a/phar_system/inventory/index.html
+++ b/phar_system/inventory/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
   <title>盤點操作頁面</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css?v=2.3">
   <link rel="stylesheet" href="vision_count.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_count_drugs.css?v=2.2">
@@ -42,12 +42,16 @@
   </script>
 </head>
 <body>
+  <div class="popup_notice_for_sub_container">
+    <div class="ppnfs_title">通知：</div>
+    <div class="ppnfs_content"></div>
+  </div>
       <script>
         (async function() 
         {
           let body = document.querySelector('body');
 
-          // document.body.style.position = 'absolute';
+          document.body.style.position = 'relative';
           document.body.style.overflowY = "scroll";
           document.body.style.overflowX = "hidden";
         
@@ -136,10 +140,12 @@
   ChathubErrorEvent = ChathubError;
   function ChathubError()
   {
-    // alert("連線斷開,重新整理");
-    // location.reload()
-    signalR_init(`${api_ip}chatHub`);
-    console.log("reconnect....");
+    alert("連線斷開,重新整理");
+    location.reload();
+    // Set_main_div_enable(true);
+    // signalR_init(`${api_ip}chatHub`);
+    // console.log("reconnect....");
+    // Set_main_div_enable(false);
   }
 
   BarcodeKeyinEvent = BarcodeKeyin;
