--- a/phar_system/cpoe_query/index.html
+++ b/phar_system/cpoe_query/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="../../favicon.ico" >
+        <link rel="icon" href="../../favicon.ico" >
     <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
     <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>中藥交易紀錄</title>
-    <script type="module" crossorigin src="./assets/main-Cs13cPDp.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-Bk1i4Ot3.css">
+    <title>醫令查詢</title>
+    <script type="module" crossorigin src="./assets/main-RVsFtt8U.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-CRttziK0.css">
   </head>
   <body>
     <div id="root"></div>
