板更，住院調劑調劑紀錄log

--- a/phar_system/cpoe_query/index.html
+++ b/phar_system/cpoe_query/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>醫令查詢</title>
-    <script type="module" crossorigin src="./assets/main-RVsFtt8U.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-CRttziK0.css">
+    <script type="module" crossorigin src="./assets/main-RVsFtt8U.js?v=1.1"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-CRttziK0.css?v=1.1">
   </head>
   <body>
     <div id="root"></div>
