--- a/phar_system/ch_medical_order/index.html
+++ b/phar_system/ch_medical_order/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>中藥醫令</title>
-    <script type="module" crossorigin src="./assets/main-OMTg-P_7.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-ChjssBSF.css">
+    <script type="module" crossorigin src="./assets/main-OMTg-P_7.js?v=1.1"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-ChjssBSF.css?v=1.1">
   </head>
   <body>
     <div id="root"></div>
