住院要車板更

--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="popup_med_take.css?v=1.4">
   <link rel="stylesheet" href="popup_med_take_time.css?v=1.3">
   <link rel="stylesheet" href="popup_bed_list.css?v=1.5">
-  <link rel="stylesheet" href="popup_med_list.css?v=14.0">
+  <link rel="stylesheet" href="popup_med_list.css?v=16.0">
   <link rel="stylesheet" href="popup_med_list_search.css">
   <link rel="stylesheet" href="popup_light_table_select.css">
   <link rel="stylesheet" href="popup_med_pic.css">
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="popup_bed_change_search.css">
   <link rel="stylesheet" href="popup_discharged_list.css?v=1.3">
   <link rel="stylesheet" href="popup_med_change_list.css?v=1.3">
+  <link rel="stylesheet" href="popup_notice.css?v=1.4">
   <script src="../Function/Basic.js?v=1.14"></script>
 
   <script>
@@ -71,6 +72,7 @@
           loadScript("popup_bed_change.js");
           loadScript("popup_bed_change_search.js");
           loadScript("popup_discharged_list.js");
+          loadScript("popup_notice.js");
         })();
 
   </script>
