--- a/phar_system/inventory/index.html
+++ b/phar_system/inventory/index.html
@@ -36,6 +36,7 @@
           loadScript("index.js");
           loadScript("jsonFunc.js");
           loadScript("../api/web_permissions.js");
+          loadScript("../api/inventory_review_api.js");
           loadScript("popup_count_drugs.js");
         })();
 
