--- a/phar_system/inventory/index.html
+++ b/phar_system/inventory/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="vision_count.css">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="popup_count_drugs.css?v=2.2">
+  <link rel="stylesheet" href="popup_creatSelect.css?v=1">
   <link rel="icon" href="../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
   <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
