住院要車調整

--- a/phar_system/inspection_manager/index.html
+++ b/phar_system/inspection_manager/index.html
@@ -18,7 +18,7 @@
     <script src="../../session_check.js"></script>
     <script src="../../session.js"></script>
     <script src="../UI/navBar.js"></script>
-    <script src="frontpage.js"></script>
+    <script src="frontpage.js?v=1.1"></script>
     <script src="jsonFunc.js?v=1.0"></script>
     <script src="frontpage_loadingdata.js?v=1.4"></script>
     <script src="forntpage_popup_serch.js"></script>
