Co-authored-by: LeonLu3303 <LeonLu3303@users.noreply.github.com>

--- a/phar_system/inventory/index.html
+++ b/phar_system/inventory/index.html
@@ -39,6 +39,7 @@
           loadScript("../api/web_permissions.js");
           loadScript("../api/inventory_review_api.js");
           loadScript("popup_count_drugs.js");
+          loadScript("../api/onlineReport.js");
         })();
 
   </script>
