--- a/phar_system/inspection_manager/index.html
+++ b/phar_system/inspection_manager/index.html
@@ -23,7 +23,7 @@
     <script src="frontpage_loadingdata.js?v=1.4"></script>
     <script src="forntpage_popup_serch.js"></script>
     <script src="frontpage_popup_add.js"></script>
-    <script src="frontpage_popup_upload.js"></script>
+    <script src="frontpage_popup_upload.js?v=1.2"></script>
     <script src="menu_popup.js"></script>
     <script src="../api/web_permissions.js"></script>
     
