Co-authored-by: LeonLu3303 <LeonLu3303@users.noreply.github.com>

--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -10,24 +10,24 @@
   <!-- <link rel="stylesheet" href="main.css"> -->
   <link rel="stylesheet" href="style.css?v=1.5">
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="allocate.css?v=2.3">
+  <link rel="stylesheet" href="allocate.css?v=2.4">
   <link rel="stylesheet" href="review.css">
   <link rel="stylesheet" href="popup_dc_new.css">
   <link rel="stylesheet" href="popup_med_take.css?v=1.4">
   <link rel="stylesheet" href="popup_med_take_time.css?v=1.3">
   <link rel="stylesheet" href="popup_bed_list.css?v=1.6">
-  <link rel="stylesheet" href="popup_med_list.css?v=16.0">
+  <link rel="stylesheet" href="popup_med_list.css?v=17">
   <link rel="stylesheet" href="popup_med_list_search.css">
   <link rel="stylesheet" href="popup_light_table_select.css">
-  <link rel="stylesheet" href="popup_med_pic.css">
-  <link rel="stylesheet" href="popup_prescription_info.css">
-  <link rel="stylesheet" href="popup_similar_drugs.css">
-  <link rel="stylesheet" href="popup_physician_notes.css">
-  <link rel="stylesheet" href="popup_insurance_regulations.css">
+  <link rel="stylesheet" href="popup_med_pic.css?v=1.1">
+  <link rel="stylesheet" href="popup_prescription_info.css?v=1.1">
+  <link rel="stylesheet" href="popup_similar_drugs.css?v=1.1">
+  <link rel="stylesheet" href="popup_physician_notes.css?v=1.1">
+  <link rel="stylesheet" href="popup_insurance_regulations.css?v=1.1">
   <link rel="stylesheet" href="popup_bed_change.css?v=1.5">
   <link rel="stylesheet" href="popup_bed_change_search.css">
-  <link rel="stylesheet" href="popup_discharged_list.css?v=1.4">
-  <link rel="stylesheet" href="popup_med_change_list.css?v=1.4">
+  <link rel="stylesheet" href="popup_discharged_list.css?v=1.6">
+  <link rel="stylesheet" href="popup_med_change_list.css?v=1.5">
   <link rel="stylesheet" href="popup_notice.css?v=1.4">
   <script src="../Function/Basic.js?v=1.14"></script>
 
