--- a/phar_system/pages_setting/index.html
+++ b/phar_system/pages_setting/index.html
@@ -8,8 +8,8 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
     <link rel="icon" type="image/png" sizes="192x192" href="android-touch-icon.png">
     <title>Pages Setting</title>
-    <script type="module" crossorigin src="./assets/main-CepohNUT.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-CbtSeFtm.css">
+    <script type="module" crossorigin src="./assets/main-CepohNUT.js?v=1.1"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-CbtSeFtm.css?v=1.1">
   </head>
   <body>
     <div id="root"></div>
