--- a/phar_system/medicine_cart/order_record/index.html
+++ b/phar_system/medicine_cart/order_record/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>住院醫令查詢</title>
-    <script type="module" crossorigin src="./assets/main-C1h3KrpM.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/main-Cqu1RI0k.css">
+    <script type="module" crossorigin src="./assets/main-C1h3KrpM.js?v=1.1"></script>
+    <link rel="stylesheet" crossorigin href="./assets/main-Cqu1RI0k.css?v=1.1">
   </head>
   <body>
     <div id="root"></div>
