--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="expires" content="0">
     <link rel="stylesheet" href="../login.css">
-    <title>次世代智慧藥局管理平台</title>
+    <title>智慧醫療管理系統</title>
     <script src="../Function/Basic.js"></script>
 
     <script>
@@ -32,7 +32,7 @@
                 <img src="../user.png" alt="">
             </div>
             <div class="form_background"></div>
-            <h2>次世代智慧藥局整合平台</h2>
+            <h2>智慧醫療管理系統</h2>
             <div class="input_container" style="margin-bottom: 20px;">
                 <label for="account">
                     <img src="../user_little.png" alt="">
@@ -49,7 +49,7 @@
         </form>
     </div>
     <div class="under-line">
-        <B> Copyright ©2024 鴻森智能科技 </B>
+        <B> Copyright ©2025 鴻森智能科技 </B>
     </div>
 </body>
 </html>
