--- a/phar_system/frontpage/index.html
+++ b/phar_system/frontpage/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
-  <title>智慧藥局系統</title>
+  <title>智慧醫療管理系統</title>
   <link rel="stylesheet" href="front_new.css?v=1.34">
   <link rel="icon" href="../../favicon.ico" >
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="192x192">
