--- a/phar_system/medicine_cart/index.html
+++ b/phar_system/medicine_cart/index.html
@@ -8,15 +8,15 @@
   <meta http-equiv="expires" content="0">
   <title>住院藥局調劑</title>
   <!-- <link rel="stylesheet" href="main.css"> -->
-  <link rel="stylesheet" href="style.css?v=1.5">
+  <link rel="stylesheet" href="style.css?v=1.7">
   <link rel="stylesheet" href="../UI/style/navBar.css">
-  <link rel="stylesheet" href="allocate.css?v=2.6">
+  <link rel="stylesheet" href="allocate.css?v=2.7">
   <link rel="stylesheet" href="review.css">
   <link rel="stylesheet" href="popup_dc_new.css">
   <link rel="stylesheet" href="popup_med_take.css?v=1.4">
   <link rel="stylesheet" href="popup_med_take_time.css?v=1.3">
   <link rel="stylesheet" href="popup_bed_list.css?v=1.6">
-  <link rel="stylesheet" href="popup_med_list.css?v=18">
+  <link rel="stylesheet" href="popup_med_list.css?v=19">
   <link rel="stylesheet" href="popup_med_list_search.css">
   <link rel="stylesheet" href="popup_light_table_select.css">
   <link rel="stylesheet" href="popup_med_pic.css?v=1.1">
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="popup_discharged_list.css?v=1.7">
   <link rel="stylesheet" href="popup_med_change_list.css?v=1.7">
   <link rel="stylesheet" href="popup_notice.css?v=1.4">
+  <link rel="stylesheet" href="popup_self_operate.css?v=1.1">
   <script src="../Function/Basic.js?v=1.14"></script>
 
   <script>
@@ -47,6 +48,7 @@
           loadScript("../api/web_permissions.js");
           loadScript("../api/med_page.js");
           loadScript("../api/pages_setting.js");
+          loadScript("../api/logger.js");
           // loadScript("main_loadingdata.js");
           // loadScript("main_popup_serch.js");
           loadScript("popup_login.js");
@@ -73,6 +75,7 @@
           loadScript("popup_bed_change_search.js");
           loadScript("popup_discharged_list.js");
           loadScript("popup_notice.js");
+          loadScript("popup_self_operate.js");
         })();
 
   </script>
@@ -126,6 +129,9 @@
 
     get_popup_med_take_time();
     popup_med_take_time_div.Set_Visible(false);
+
+    get_popup_self_operate();
+    popup_self_operate_div.Set_Visible(false);
   </script>
 
   <div class="under-line">
