--- a/phar_system/inspection/index.html
+++ b/phar_system/inspection/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
   <title>驗收操作頁面</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css?v=1.1">
   <link rel="stylesheet" href="../UI/style/navBar.css">
   <link rel="stylesheet" href="../UI/popup_UI/med_storage/popup_storage.css">
   <link rel="icon" href="../favicon.ico" >
