--- a/phar_system/inspection_manager/index.html
+++ b/phar_system/inspection_manager/index.html
@@ -19,11 +19,11 @@
     <script src="../../session.js"></script>
     <script src="../UI/navBar.js"></script>
     <script src="frontpage.js?v=1.1"></script>
-    <script src="jsonFunc.js?v=1.0"></script>
-    <script src="frontpage_loadingdata.js?v=1.4"></script>
+    <script src="jsonFunc.js?v=1.1"></script>
+    <script src="frontpage_loadingdata.js?v=1.5"></script>
     <script src="forntpage_popup_serch.js"></script>
-    <script src="frontpage_popup_add.js"></script>
-    <script src="frontpage_popup_upload.js?v=1.2"></script>
+    <script src="frontpage_popup_add.js?v=1.1"></script>
+    <script src="frontpage_popup_upload.js?v=1.3"></script>
     <script src="menu_popup.js"></script>
     <script src="../api/web_permissions.js"></script>
     
