--- a/medicine_cart/index.html
+++ b/medicine_cart/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="popup_med_list.css">
   <link rel="stylesheet" href="popup_med_list_search.css">
   <link rel="stylesheet" href="popup_light_table_select.css">
-  <link rel="stylesheet" href="popup_med_pic.css">
+  <link rel="stylesheet" href="popup_med_pic.css?v=1.1">
   <link rel="stylesheet" href="popup_prescription_info.css">
   <link rel="stylesheet" href="popup_similar_drugs.css">
   <link rel="stylesheet" href="popup_physician_notes.css">
